Add unit test for connect ml plugin (#883)
The added unit tests are not testing the end-to-end case for the
'connect'. Instead, the tests simply ensure that the functionality of
the spark rapids ml JVM estimator/model could work even without
'connect' , behaving like a normal ML operator.

---------

Signed-off-by: Bobby Wang <wbo4958@gmail.com>